2001-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Encolose the defining procedures for the unbound
	functions with `eval-and-compile'.
	(browse-url-interactive-arg): Bind it only at the compile-time as
	an autoload'ed function.
	* w3m-xmas.el: Provide `w3m-xmas' and then require `w3m'.
	* w3m-om.el: Provide `w3m-om' and then require `w3m'.
	* w3m-form.el: Require `w3m'.
	* w3m-e21.el: Provide `w3m-e21' and then require `w3m'.

2001-03-22  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m-antenna.el: All occurrence of `natsumikan' is replaced with
	`natsumican'.

2001-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (coding-system-category): Don't define it for the Emacs
	variants.
	* w3m-om.el (coding-system-category): Defalias to
	`get-code-mnemonic'.
	* w3m-xmas.el (coding-system-category): Defalias to
	`coding-system-type' if it is not bound.

	* w3mhack.el (w3mhack-version): Don't require `w3m' in the top
	level, do it here instead.

2001-03-22  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-save-list): Use 'pp' if have pp().
	Bind 'print-length' and 'print-level' to nil.

2001-03-22  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Structure of hash database of arrived urls is
	changed.
	(w3m-arrived-setup): Follow change of DB structure.
	(w3m-arrived-shutdown): Likewise.
	(w3m-arrived-add): Likewise, and argument spec is changed.
	(w3m-arrived-time): New function.
	(w3m-arrived-seq, w3m-arrived-put-title, w3m-arrived-arrived-time,
	w3m-arrived-put-arrived-time): Removed.
	(w3m-goto-url): Follow change of `w3m-arrived-add'.

2001-03-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Refresh the visibility of toolbar when
	XEmacs is running.

2001-03-22  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-url-to-file-name): Fix bug reported in
	[emacs-w3m:00305].
	(w3m-goto-url): Set the value interpreted as a directory to
	`default-directory'.
